--- a/static/styles/style.less
+++ b/static/styles/style.less
@@ -4,10 +4,6 @@
   justify-content: space-between;
 }
 
-.event-sides {
-  color: blue;
-}
-
-.event-description, .event-heritage {
+.event-description, .event-inheritance, .event-annotation {
   font-weight: bold;
 }
