Remove side display and change annotation display

--- a/static/styles/style.less
+++ b/static/styles/style.less
@@ -7,3 +7,12 @@
 .event-description, .event-inheritance, .event-annotation {
   font-weight: bold;
 }
+
+.event-annotation {
+  background-color: green;
+  color: white;
+  border-radius: 3px;
+  padding-left: 3px;
+  padding-right: 3px;
+  display: inline-flex;
+}
