Improve style + add title + fix missing api route

--- a/static/styles/style.less
+++ b/static/styles/style.less
@@ -16,3 +16,12 @@
   padding-right: 3px;
   display: inline-flex;
 }
+
+a.child-event:not(:last-child) {
+  border-right: 1px solid #babdc1;
+  padding-right: 5px;
+}
+
+.forge-event-search {
+  margin-bottom: 5px;
+}
